--- a/CCIP/Supporting Files/CCIP.xcconfig
+++ b/CCIP/Supporting Files/CCIP.xcconfig
@@ -3,21 +3,10 @@ WATCH_PRODUCT_BUNDLE_IDENTIFIER             = $(MAIN_PRODUCT_BUNDLE_IDENTIFIER).
 WATCH_EXTENSION_PRODUCT_BUNDLE_IDENTIFIER   = $(WATCH_PRODUCT_BUNDLE_IDENTIFIER).watchkitextension
 MAIN_BUILD_VERSION                          = #BUILD_VERSION#
 MAIN_BUILD_SHORT_VERSION                    = #BUILD_SHORT_VERSION#
+APP_NAME                                    = '(@"#APP_NAME#")'
 APP_GROUP_ID                                = group.#domain#.ccip
-ONE_SIGNAL_APP_TOKEN                        = '(@"#one_signal_token#")'
-___API_HOST_DOMAIN___                       = '(@"ccip.#mainDomain#")'
 __API_HOST_DOMAIN__                         = '(@"#apiDomain#")'
 CONF_BASE_DOMAIN                            = '(@"#mainDomain#")'
-STAFF_BASE_DOMAIN                           = '(@"#mainStaffDomain#")'
-PUZZLE_GAME_BASE_DOMAIN                     = '(@"#mainPuzzleDomain#")'
-SPONSOR_WEB_BASE_URL                        = '(@"#sponsorWebUrlBase#")'
-SPONSOR_WEB_PATH                            = '(@"#sponsorWebUrl#")'
-SPONSOR_USE_WEB                             = #sponsorUseWeb#
-STAFF_WEB_BASE_URL                          = '(@"#staffWebUrlBase#")'
-STAFF_WEB_PATH                              = '(@"#staffWebUrl#")'
-STAFF_USE_WEB                               = #staffUseWeb#
-LOG_CHANNEL                                 = '(@"#channel#")'
-TELEGRAM_URL                                = '(@"#tg_chat#")'
 COLOR_DEV                                   = '(@"#color_dev#")'
 COLOR_TITLE_HIGHLIGHTED                     = '(@"#color_title_highlighted#")'
 COLOR_GRADIENT1                             = '(@"#color_gradient1#")'
