--- a/CCIP/Supporting Files/CCIP.release.xcconfig
+++ b/CCIP/Supporting Files/CCIP.release.xcconfig
@@ -3,21 +3,10 @@ WATCH_PRODUCT_BUNDLE_IDENTIFIER             = $(MAIN_PRODUCT_BUNDLE_IDENTIFIER).
 WATCH_EXTENSION_PRODUCT_BUNDLE_IDENTIFIER   = $(WATCH_PRODUCT_BUNDLE_IDENTIFIER).watchkitextension
 MAIN_BUILD_VERSION                          = 2.1.100
 MAIN_BUILD_SHORT_VERSION                    = 2.1
+APP_NAME                                    = '(@"PyCon")'
 APP_GROUP_ID                                = group.org.pycon.ccip
-ONE_SIGNAL_APP_TOKEN                        = '(@"9506c2db-f054-46b3-9396-744807736fb8")'
-___API_HOST_DOMAIN___                       = '(@"ccip.tw.pycon.org")'
 __API_HOST_DOMAIN__                         = '(@"ccip.pycon.org")'
 CONF_BASE_DOMAIN                            = '(@"tw.pycon.org")'
-STAFF_BASE_DOMAIN                           = '(@"tw.pycon.org/2018/static/img/staffs")'
-PUZZLE_GAME_BASE_DOMAIN                     = '(@"game.pycon.tw")'
-SPONSOR_WEB_BASE_URL                        = '(@"tw.pycon.org/2018/#/sponsor")'
-SPONSOR_WEB_PATH                            = '(@"tw.pycon.org/2018/#/sponsor")'
-SPONSOR_USE_WEB                             = 1
-STAFF_WEB_BASE_URL                          = '(@"tw.pycon.org/2018/#/staff")'
-STAFF_WEB_PATH                              = '(@"tw.pycon.org/2018/#/staff")'
-STAFF_USE_WEB                               = 1
-LOG_CHANNEL                                 = '(@"")'
-TELEGRAM_URL                                = '(@"")'
 COLOR_DEV                                   = '(@"#f2a900")'
 COLOR_TITLE_HIGHLIGHTED                     = '(@"#333333")'
 COLOR_GRADIENT1                             = '(@"#e57b5c")'
