update for app uses non exempt encryption settings

--- a/CCIP/Supporting Files/Info.plist
+++ b/CCIP/Supporting Files/Info.plist
@@ -78,5 +78,7 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<true/>
+	<key>ITSAppUsesNonExemptEncryption</key>
+	<false/>
 </dict>
 </plist>
