--- a/CCIP/Supporting Files/COSCUP/PassAssets.bundle/WiFiConfiguration.plist
+++ b/CCIP/Supporting Files/COSCUP/PassAssets.bundle/WiFiConfiguration.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>SSID</key>
-	<string>COSCUP 2018</string>
+	<string></string>
 	<key>Pass</key>
 	<string></string>
 </dict>
