--- a/CCIP/Supporting Files/CCIP.entitlements
+++ b/CCIP/Supporting Files/CCIP.entitlements
@@ -9,6 +9,9 @@
         <string>applinks:ccip.coscup.org</string>
         <string>applinks:ccip.sitcon.org</string>
 		<string>applinks:ccip.pycon.tw</string>
+        <string>applinks:gb8p5.app.goo.gl</string>
+        <string>applinks:coscup.page.link</string>
+        <string>applinks:tyk55.app.goo.gl</string>
         <string>applinks:s6bhm.app.goo.gl</string>
 	</array>
 	<key>com.apple.developer.networking.HotspotConfiguration</key>
