--- a/CCIP/Supporting Files/CCIP.xcconfig
+++ b/CCIP/Supporting Files/CCIP.xcconfig
@@ -5,3 +5,4 @@ MAIN_BUILD_VERSION                          = #BUILD_VERSION#
 MAIN_BUILD_SHORT_VERSION                    = #BUILD_SHORT_VERSION#
 APP_NAME                                    = '(@"#APP_NAME#")'
 APP_GROUP_ID                                = group.#domain#.ccip
+APP_SCHEME                                  = ccip-#CONF_NAME#
