--- a/CCIP/Supporting Files/Info.plist
+++ b/CCIP/Supporting Files/Info.plist
@@ -25,7 +25,7 @@
 			<string>$(MAIN_PRODUCT_BUNDLE_IDENTIFIER)</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>ccip</string>
+				<string>$(APP_SCHEME)</string>
 			</array>
 		</dict>
 	</array>
